--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>THE MMO</title>
-</head>
-<body>
-
-
-<script type="text/javascript" src="js/main.js"></script>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Turn-Based RPG in Phaser 3</title>        
+        <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+        <script src="js/phaser.min.js"></script>       
+        <script src="js/game.js"></script>        
+        <style>
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+    </head>
+    <body>
+        <div id="content" style="display: block; width: 100%; text-align: center"></div>
+    </body>
 </html>
